--- a/Android/CurrencyConverter/app/src/main/res/layout/layout_currency_recycler_view_item.xml
+++ b/Android/CurrencyConverter/app/src/main/res/layout/layout_currency_recycler_view_item.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/_50dp"
     android:layout_marginTop="@dimen/_15dp"
     android:layout_marginBottom="@dimen/_15dp"
     android:layout_marginStart="@dimen/_10dp"
     android:layout_marginEnd="@dimen/_10dp"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:orientation="horizontal">
 
     <ImageView
